3sem/IFJ/IFJ-Project/tests/lexer/errors/test_unterminated_block_comment.wren
// Test: Unterminated block comment
// Expected: Lexical error (exit code 1)
// Reason: /* comment is never closed

import "ifj25" for Ifj

class Program {
    static main() {
        /* This comment is never closed
        var x
        x = 10
    }
}

